--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,19 +1,49 @@
-<html lang="en">
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">STT</th>
+            <th scope="col">Username</th>
+            <th scope="col">Full name</th>
+            <th scope="col">Address</th>
+            <th scope="col">Setting</th>
+        </tr>
+    </thead>
+    <div class="my-3 mx-3">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%- pageTitle %></title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
-</head>
+        <a href="/user/create" class="btn btn-success"><i style="margin-right: 3px;" class="fa-solid fa-plus"></i>Add
+            new user</a>
+    </div>
+    <tbody>
+        <% for(let i=0; i< users.length; i++) { %>
+            <tr>
+                <td>
+                    <%= i+1 %>
+                </td>
+                <td>
+                    <%= users[i].username %>
+                </td>
+                <td>
+                    <%= users[i].fullname %>
+                </td>
+                <td>
+                    <%= users[i].address %>
+                </td>
+                <td>
+                    <a class="text-decoration-none" href="/user/<%= users[i].id %>">
+                        <i class="fa-regular fa-eye "></i>
+                    </a>
 
-<body>
-    <%- include('./header.ejs') %>
-        <h1>
-            HOME
-        </h1>
-        <%- include('./footer.ejs') %>
-</body>
+                    <a class="text-decoration-none" href="/update/<%=users[i].id %>">
+                        <i class="fa-regular fa-pen-to-square px-1"></i>
+                    </a>
+                    <form action="/delete/<%= users[i].id %>" method="POST" style="display:inline;">
+                        <button type="submit" style="border: none; background: none; cursor: pointer;">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </form>
+                </td>
+            </tr>
+            <% } %>
 
-</html>
+    </tbody>
+</table>
