--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>x</title>
+    <title><%- pageTitle %></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
 </head>
 
 <body>
-    <%- include('../pages/header.ejs') %>
+    <%- include('./header.ejs') %>
         <main>
-            <%- include(page) %>
+            <%- include('../' + page) %>
         </main>
-        <%- include('../pages/footer.ejs') %>
+        <%- include('./footer.ejs') %>
 </body>
 
 </html>
