--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -36,7 +36,8 @@
                     <a class="text-decoration-none" href="/update/<%=users[i].id %>">
                         <i class="fa-regular fa-pen-to-square px-1"></i>
                     </a>
-                    <form action="/delete/<%= users[i].id %>" method="POST" style="display:inline;">
+                    <form action="/delete/<%= users[i].id%>?_method=DELETE" method="POST" style="display:inline;"
+                        class="delete-user-form">
                         <button type="submit" style="border: none; background: none; cursor: pointer;">
                             <i class="fa-solid fa-trash"></i>
                         </button>
@@ -47,3 +48,15 @@
 
     </tbody>
 </table>
+
+<script>
+    document.querySelectorAll('.delete-user-form').forEach(form => {
+        form.addEventListener('submit', (event) => {
+            const confirmDelete = confirm('Are you sure you want to delete this user?');
+            if (!confirmDelete) {
+                event.preventDefault();
+            }
+        });
+    });
+
+</script>
